Replace Java 11 Files.readString() with Java 8 compatible code
Co-authored-by: ladlag <30717288+ladlag@users.noreply.github.com>